# contact-management

./: Cargo.toml
migrations/: 01_init.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/dto/: email.rs  mobile.rs  person.rs
src/app/entity/: email.rs  mobile.rs  mod.rs  person.rs
src/app/handler/: emails.rs  healths.rs  mobiles.rs  mod.rs  persons.rs
src/app/repository/: email_repository.rs  mobile_repository.rs  mod.rs  person_repository.rs
src/app/route/: mod.rs
src/app/service/: email_service.rs  mobile_service.rs  mod.rs  person_service.rs
src/pkg/: mod.rs
src/pkg/config/: app_config.rs
src/pkg/web/: web.rs
